# whisperX

./: .dockerignore  Dockerfile  TESLA_P4_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  run_whisperx.sh
