[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.4.2"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2<4.5.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=1.24.0,<2.0.0",
    "onnxruntime>=1.19",
    "pandas>=2.0.0,<3.0.0",
    "pyannote-audio>=3.0.0,<3.1.0",
    "torch>=2.0.0,<2.1.0",
    "torchaudio>=2.0.0,<2.1.0",
    "transformers>=4.30.0,<4.40.0",
]


[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]
